# new-wakscord-node

./: .gitignore  Cargo.toml  Dockerfile  README.md  go.mod  go.sum  main.go
.github/workflows/: build_check.yml  docker_push.yml
config/: initialize.go  types.go
config/src/: lib.rs
discord/: initialize.go  request.go  types.go
env/: env.go
requester/: request.go  types.go
server/: Cargo.toml  routes.go  server.go  task.go  types.go
server/src/: lib.rs
src/: main.rs
utils/: chunk.go
